@@ -230,11 +230,6 @@
             "version" : "1.14000001"
          },
          {
-            "class" : "Dist::Zilla::Plugin::MetaResourcesFromGit",
-            "name" : "@Filter/MetaResourcesFromGit",
-            "version" : "1.103620"
-         },
-         {
             "class" : "Dist::Zilla::Plugin::CopyFilesFromBuild",
             "name" : "@Filter/CopyFilesFromBuild",
             "version" : "0.103510"
@@ -308,6 +303,11 @@
             "class" : "inc::P9YOSDeps",
             "name" : "P9YOSDeps",
             "version" : null
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::MetaResourcesFromGit",
+            "name" : "MetaResourcesFromGit",
+            "version" : "1.103620"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
