@@ -5,7 +5,7 @@
 <!--
   generated by Pod::Simple::HTML v3.20,
   using Pod::Simple::PullParser v3.20,
-  under Perl v5.016000 at Wed Oct 17 18:03:05 2012 GMT.
+  under Perl v5.016000 at Wed Oct 17 18:24:21 2012 GMT.
 
  If you want to change this HTML document, you probably shouldn't do that
    by changing it directly.  Instead, see about changing the calling options
@@ -146,16 +146,16 @@ name="HISTORY"
 >Proc::ProcessTable</a>. I have nothing against the authors of that module, but I feel like we should try to learn from our failures and adapt in kind.</p>
 
 <ul>
-<li><b>Too many OSs in one distribution.</b> I dunno about you, but I don&#39;t happen to have 15 different OSs on VMs anywhere. At best, I might have access to 2-3 different platforms. So, trying to test out code on a platform that you don&#39;t actually own is especially difficult.</li>
-</ul>
-
+<li><b>Too many OSs in one distribution.</b> I dunno about you, but I don&#39;t happen to have 15 different OSs on VMs anywhere. At best, I might have access to 2-3 different platforms. So, trying to test out code on a platform that you don&#39;t actually own is especially difficult.
 <p>Thus, this module is merely a wrapper around various other modules that provide process table information. Those guys actually have the means (and the drive) to test their stuff on those OSs. (The sole exception is the ProcFS module, but that may get split eventually.)</p>
+</li>
+</ul>
 
 <ul>
-<li><b>Too much C/XS code.</b> The C and XS code falls in a class of exclusivity that makes it even harder to maintain. If I were to conjure up some wild guess, I would say that only 20% of Perl programmers could actually read, understand, and program C/XS code. People aren&#39;t calling the process table a 1000 times a second, so there&#39;s really no need for a speed boost, either.</li>
-</ul>
-
+<li><b>Too much C/XS code.</b> The C and XS code falls in a class of exclusivity that makes it even harder to maintain. If I were to conjure up some wild guess, I would say that only 20% of Perl programmers could actually read, understand, and program C/XS code. People aren&#39;t calling the process table a 1000 times a second, so there&#39;s really no need for a speed boost, either.
 <p>Alas, sometimes this is unavoidable, with the process information buried in C library calls. However, the <code>/proc</code> FS is available on a great many amount of UNIX platforms, so it should be used <i>as much as possible</i>. Also, I take this moment to shake my tiny little fist at the BSD folks for actually <b>regressing</b> the OS by removing support for <code>/proc</code>. All of the reasons behind it are unsound or have solutions that don&#39;t involve removing this most basic right of UNIX users.</p>
+</li>
+</ul>
 
 <h1><a class='u'
 name="CAVEATS_/_TODO"
