@@ -20,7 +20,12 @@ copyright_year   = 2012
 -remove = Test::Compile
 -remove = Test::UseAllModules
 -remove = Test::Version
-
-x_irc = irc://irc.perl.org/#win32
+; x_irc param isn't passing for some reason
+-remove = MetaResourcesFromGit
 
 [=inc::P9YOSDeps / P9YOSDeps]
+; authordep Dist::Zilla::Plugin::MakeMaker::Awesome
+
+[MetaResourcesFromGit]
+x_irc          = irc://irc.perl.org/#win32
+bugtracker.web = https://github.com/%a/%r/issues
